Update deployment Streamlit Dashboard

--- a/quix.yaml
+++ b/quix.yaml
@@ -45,7 +45,7 @@ deployments:
     state:
       enabled: true
       size: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: chat_count
         inputType: FreeText
