Add 2 more customers and 2 more support agents

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,8 @@ services:
     depends_on:
       - redpanda
 
-  ai-support-agent:
-    container_name: ai-support-agent
+  ai-support-agent-1:
+    container_name: ai-support-agent-1
     restart: always
     build:
       context: "./AI Customer Support Agent"
@@ -74,8 +74,66 @@ services:
     depends_on:
       - redpanda
 
-  ai-customer:
-    container_name: ai-customer
+  ai-support-agent-2:
+    container_name: ai-support-agent-2
+    restart: always
+    build:
+      context: "./AI Customer Support Agent"
+    environment:
+      - KAFKA_BROKER_ADDRESS=redpanda:9092
+      - output=ai-chat
+      - Quix__Portal__Api=https://portal-api.platform.quix.io
+      - Quix__Sdk__Token=${QUIX_SDK_TOKEN}
+      - use_local_kafka=true
+    depends_on:
+      - redpanda
+
+  ai-support-agent-3:
+    container_name: ai-support-agent-3
+    restart: always
+    build:
+      context: "./AI Customer Support Agent"
+    environment:
+      - KAFKA_BROKER_ADDRESS=redpanda:9092
+      - output=ai-chat
+      - Quix__Portal__Api=https://portal-api.platform.quix.io
+      - Quix__Sdk__Token=${QUIX_SDK_TOKEN}
+      - use_local_kafka=true
+    depends_on:
+      - redpanda
+
+  ai-customer-1:
+    container_name: ai-customer-1
+    restart: always
+    build:
+      context: "./AI Customer"
+    environment:
+      - KAFKA_BROKER_ADDRESS=redpanda:9092
+      - output=ai-chat
+      - conversation_length=5
+      - Quix__Portal__Api=https://portal-api.platform.quix.io
+      - Quix__Sdk__Token=${QUIX_SDK_TOKEN}
+      - use_local_kafka=true
+    depends_on:
+      - redpanda
+
+  ai-customer-2:
+    container_name: ai-customer-2
+    restart: always
+    build:
+      context: "./AI Customer"
+    environment:
+      - KAFKA_BROKER_ADDRESS=redpanda:9092
+      - output=ai-chat
+      - conversation_length=5
+      - Quix__Portal__Api=https://portal-api.platform.quix.io
+      - Quix__Sdk__Token=${QUIX_SDK_TOKEN}
+      - use_local_kafka=true
+    depends_on:
+      - redpanda
+
+  ai-customer-3:
+    container_name: ai-customer-3
     restart: always
     build:
       context: "./AI Customer"
@@ -122,5 +180,22 @@ services:
       - Quix__Portal__Api=https://portal-api.platform.quix.io
       - Quix__Sdk__Token=${QUIX_SDK_TOKEN}
       - use_local_kafka=true
+    depends_on:
+      - redpanda
+      
+  dashboard:
+    container_name: dashboard
+    restart: always
+    build:
+      context: "./Streamlit Dashboard"
+    environment:
+      - chat_count=3
+      - style_sheet=style.css
+      - INFLUXDB_HOST=https://eu-central-1-1.aws.cloud2.influxdata.com
+      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
+      - INFLUXDB_ORG=${INFLUX_ORG}
+      - INFLUXDB_DATABASE=${INFLUX_BUCKET}
+    ports:
+      - 8081:80
     depends_on:
       - redpanda
