--- a/Streamlit Dashboard/dockerfile
+++ b/Streamlit Dashboard/dockerfile
@@ -5,7 +5,8 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONIOENCODING=UTF-8
 
 WORKDIR /app
-COPY --from=git /project/requirements.txt .
-RUN python3 -m pip install -r requirements.txt
-COPY --from=git /project .
+COPY . .
+
+RUN find | grep requirements.txt | xargs -I '{}' python3 -m pip install -r '{}' --extra-index-url https://pkgs.dev.azure.com/quix-analytics/53f7fe95-59fe-4307-b479-2473b96de6d1/_packaging/public/pypi/simple/
+
 ENTRYPOINT ["streamlit", "run", "main.py", "--server.port=80", "--server.address=0.0.0.0"]
