--- a/Sentiment Analyzer/app.yaml
+++ b/Sentiment Analyzer/app.yaml
@@ -16,6 +16,6 @@ variables:
     description: Input buffer configuration (timeout and timespan in milliseconds).
     defaultValue: 0
     required: false
-dockerfile: build/dockerfile
+dockerfile: dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
