--- a/Redis Sink/app.yaml
+++ b/Redis Sink/app.yaml
@@ -21,6 +21,11 @@ variables:
     description: Conversation storage duration in minutes.
     defaultValue: 1440
     required: true
+  - name: mysecret
+    inputType: Secret
+    description: ''
+    defaultValue: influxdb_token
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
