--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -12,14 +12,14 @@ variables:
     defaultValue: style.css
     required: false
   - name: INFLUXDB_TOKEN
-    inputType: FreeText
+    inputType: Secret
     description: ''
-    defaultValue: ''
+    defaultValue: influxdb_token
     required: false
   - name: INFLUXDB_HOST
     inputType: FreeText
     description: ''
-    defaultValue: https://us-east-1-1.aws.cloud2.influxdata.com
+    defaultValue: influxdb_host
     required: false
   - name: INFLUXDB_ORG
     inputType: FreeText
@@ -31,6 +31,6 @@ variables:
     description: ''
     defaultValue: ConversationStore
     required: false
-dockerfile: build/dockerfile
+dockerfile: dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
