Add topic raw-documents-html

--- a/quix.yaml
+++ b/quix.yaml
@@ -174,3 +174,10 @@ topics:
       replicationFactor: {{topic-ai-chat-factor}}
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: raw-documents-html
+    persisted: false
+    configuration:
+      partitions: 2
+      replicationFactor: 2
+      retentionInMinutes: 10080
+      retentionInBytes: 52428800
